# ha-device-status

./: .gitignore  README.md  example.configuration.yaml  example.lovelace  example.lovelace-auto  hacs.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
custom_components/: __init__.py
custom_components/ha-device-status/: __init__.py  binary_sensor.py  const.py  manifest.json
custom_components/ha_device_status/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  schema.py  wireguard.py
custom_components/ha_device_status/translations/: en.json
