[project]
name = "ha-device-status"
version = "0.1.1"
description = ""
authors = [
    {name = "Jonathan Stoff",email = "jonathanlstoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "homeassistant (>=2026.7.3,<2027.0.0)",
    "voluptuous (>=0.16.0,<0.17.0)"
]

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
