[project]
name = "ha-device-status"
version = "0.2.2"
description = ""
authors = [
    {name = "Jonathan Stoff",email = "jonathanlstoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "homeassistant (>=2026.6.3)",
    "voluptuous (>=0.14.0)",
    "croniter (>=2.0.5)",
    "wireguard-requests (>=0.0.3,<0.1.0)"
]

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
